--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "value": "false"
     },
     "SUDO": {
-      "description": "admin",
+      "description": "919384823403",
       "required": false,
       "value": ""
     },
